--- a/xts-rest-api/xts-sdk/pom.xml
+++ b/xts-rest-api/xts-sdk/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>xts-rest</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
-	<name>xts-ally</name>
+	<name>xts-rest</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
