Added fintrens Configurations.

--- a/xts-rest-api/api-example/config.properties
+++ b/xts-rest-api/api-example/config.properties
@@ -1,11 +1,13 @@
-
-COMMON_URL=APIURL
+COMMON_URL=https://ttblaze.iifl.com
+PORT=:4000
 PREFIX_INT=/interactive
 PREFIX_MD=/marketdata
-
-SSL_TYPE=TLSv1
-SSL_CERT_PATH=C:/Program Files/Java/jre1.8.0_251/lib/security/cacerts
-
+SOURCE=WEBAPI
+HOST_LOOK_UP=/HostLookUp
+ACCESS_PASSWORD=2021HostLookUpAccess
+VERSION=interactive_1.0.1
+SSL_TYPE=TLSv1.2
+SSL_CERT_PATH=/lib/security/cacerts
 LOGIN_INT=/user/session
 LOGOUT_INT=/user/session
 PROFILE=/user/profile
@@ -19,7 +21,6 @@ TRADEBOOK=/orders/trades
 ORDERBOOK=/orders
 COVER=/orders/cover
 EXCHANGE_MESSAGE=/messages/exchange
-
 LOGIN_MD=/auth/login
 LOGOUT_MD=/auth/logout
 CLIENT_CONFIG_MD=/config/clientConfig
@@ -35,6 +36,5 @@ OPTION_TYPE_MD=/instruments/instrument/optionType
 SERIES_MD=/instruments/instrument/series
 SUBSCRIPTION_MD=/instruments/subscription
 UNSUBSCRIPTION_MD=/instruments/subscription
-
 INSTRUMENT_BY_ID=/search/instrumentsbyid
 SEARCH_INSTRUMENT=/search/instruments
