--- a/xts-rest-api/api-example/pom.xml
+++ b/xts-rest-api/api-example/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.symphony.xts.rest</groupId>
 	<artifactId>api-example</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1.1</version>
 
 	<name>api-example</name>
 	<!-- FIXME change it to the project's website -->
